// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectSchema denormalization denormalizes plain object shorthand with missing schemas 1`] = `
Object {
  "user": Object {
    "id": 1,
    "name": "Jane",
  },
}
`;

exports[`ObjectSchema denormalization denormalizes plain object shorthand with missing schemas 2`] = `
Object {
  "user": Immutable.Map {
    "id": 1,
    "name": "Jane",
  },
}
`;

exports[`ObjectSchema denormalization denormalizes plain object shorthand with missing schemas 3`] = `
Immutable.Map {
  "user": Immutable.Map {
    "id": 1,
    "name": "Jane",
  },
}
`;
